# nilcode

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUGFIX.md  BUGFIX_TUPLE_INDEX_ERROR.md  CHANGELOG.md  CLAUDE.md  HEDERA_INTEGRATION.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  UPGRADE_SUMMARY.md  V2.0.2_IMPROVEMENTS.md  VERSION_SYSTEM.md  a2a_agents.example.json  a2a_agents.json  a2a_client_demo.py  main.py  pyproject.toml  test_planner.py
.cursor/rules/: advanced-tools.mdc  agent-implementation.mdc  cli-interface.mdc  configuration.mdc  dependencies.mdc  documentation.mdc  environment-setup.mdc  index.mdc  project-structure.mdc  specialized-agents.mdc  state-management.mdc  testing.mdc  tools.mdc  workflow-routing.mdc
docs/: A2A_INTEGRATION.md
examples/: a2a_integration_demo.py  hedera_agent_example.py  hedera_dapp_example.py  hedera_smart_contract_example.py  multi_agent_demo.py  test_a2a_client.py
external_agents/hedera-manager/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
external_agents/hedera-manager/src/: a2a-server.ts  plugin-tool-calling-agent.ts  return-bytes-tool-calling-agent.ts  structured-chat-agent.ts  tool-calling-agent.ts
src/nilcode/: __init__.py  cli.py  config.py  main_agent.py  version.py
src/nilcode/a2a/: __init__.py  registry.py
src/nilcode/agents/: __init__.py  a2a_client.py  backend_developer.py  coder.py  context_gatherer.py  dependency_manager.py  error_recovery.py  frontend_developer.py  hedera_agent.py  onchain_detective.py  orchestrator.py  planner.py  preplanner.py  software_architect.py  tester.py  utils.py
src/nilcode/prompts/: claude.py
(+19 files in other folders)
