[project]
name = "nilcode"
version = "3.1.9"
description = "Production-ready multi-agent AI development system with syntax validation and language-agnostic code generation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.1",
    "langsmith>=0.4.37",
    "python-dotenv>=1.1.1",
    "a2a-sdk[all]>=0.3.10",
]

[project.scripts]
nilcode = "nilcode.main_agent:main"

[tool.uv]
package = true
